# Sunglasses

./: .directory  .gitattributes  .gitignore  .main.cpp.swp  .travis.yml  CMakeCache.txt  CMakeLists.txt  Copyright.py  DeferredCelQuad.pre  DeferredQuad.pre  Doxyfile  GUIDemo.xml  LICENSE.md  Makefile  PointShadowMap.pre  README.md  SSAOBlurQuad.pre  SSAOQuad.pre  SceneDemo.xml  SolidScene.pre  SunButtonState.cpp  SunButtonState.h  SunDirectionalLightObject.cpp  SunDirectionalLightObject.h  SunGame.cpp  SunGame.h  SunNode.cpp  SunNode.h  SunObject.cpp  SunObject.h  SunPointLightObject.cpp  SunPointLightObject.h  SunScene.cpp  SunScene.h  SunSpotlightObject.h  TEST  TexturedScene.pre  Utility.cpp  Utility.h  cmake_install.cmake  (+4 more)
Engine/: CMakeCache.txt  CMakeLists.txt  DeferredCelQuad.pre  DeferredQuad.pre  Makefile  SolidPointShadowMap.pre  SolidScene.pre  SunButtonState.cpp  SunGame.cpp  SunGame.h  SunNode.cpp  SunNode.h  SunObject.cpp  SunObject.h  SunPointLightObject.cpp  SunPointLightObject.h  SunScene.cpp  SunScene.h  TexturedScene.pre  Utility.cpp  Utility.h  cmake_install.cmake  main.cpp  pugixml.cpp  sunglasses.REMOVED.git-id
Engine/Audio/: SunMusicObject.cpp  SunSoundBufferStorage.cpp  SunSoundBufferStorage.h  SunSoundListener.cpp  SunSoundListener.h  SunSoundObject.cpp  SunSoundObject.h
Engine/Editor/: CMakeCache.txt  CMakeLists.txt  EditorApp.cpp  EditorApp.h  EditorFrame.cpp  EditorFrame.h  Makefile  SunglassesEditor  cmake_install.cmake
Engine/Graphics/: Sphere.dae  SunCamera.cpp  SunCamera.h  SunDirectionalShadowMapRenderingNode.cpp  SunDirectionalShadowMapRenderingNode.h  SunMesh.cpp  SunMesh.h  SunModel.cpp  SunModel.h  SunPointShadowMapRenderingNode.cpp  SunPointShadowMapRenderingNode.h  SunPrimitives.cpp  SunPrimitives.h  SunRenderer.cpp  SunRenderer.h  SunRenderingNode.cpp  SunRenderingNode.h  SunTexturedQuad.h
Engine/Graphics/GUI/: SunGUIItem.cpp  SunGUIItem.h  SunGUIItemMesh.cpp  SunGUIItemMesh.h  SunGUIMenu.cpp  SunGUISystem.cpp  SunGUISystem.h
Engine/Graphics/Shaders/: 2DFullscreenQuadVertex.vert  2DQuadFragment.frag  BlinnPhongMaterialBoneless.frag  BlinnPhongMaterialBoneless.vert  BlinnPhongTextureBoneless.frag  BlinnPhongVertex.vert  CubemapVertex.vert  DebugQuadFragment.frag  DebugQuadVertex.vert  DeferredShadingPassOneMaterial.frag  DeferredShadingPassOneTexture.frag  DeferredShadingPassTwo.frag  Fragment.frag  PointShadowMapFragment.frag  PointShadowMapGeometry.geom  PointShadowMapVertex.vert  ShadowMapFragment.frag  ShadowMapVertex.vert  SunShader.cpp  SunShader.h  SunShaderUniformObject.cpp  SunShaderUniformObject.h  TextFragment.frag
Engine/Physics/: GJKAlgorithm.cpp  GJKAlgorithm.h  SunPhysicsCollider.h  SunPhysicsColliderAABB.cpp  SunPhysicsColliderAABB.h  SunPhysicsColliderMesh.h  SunPhysicsColliderPlane.cpp  SunPhysicsColliderSphere.cpp  SunPhysicsColliderSphere.h  SunPhysicsForce.cpp  SunPhysicsForce.h  SunPhysicsObject.cpp  SunPhysicsObject.h  SunPhysicsSimulator.cpp  SunPhysicsSimulator.h  SunPhysicsWorld.cpp  SunPhysicsWorld.h
Engine/Runtime/: CMakeCache.txt  CMakeLists.txt  GUIDemo.xml  Makefile  SunDirectionalLightObject.cpp  SunDirectionalLightObject.h  SunGame.cpp  SunGame.h  SunObject.h  SunPointLightObject.h  SunScene.cpp  SunScene.h  Watch.mtl  cmake_install.cmake  sunglasses.REMOVED.git-id
Engine/Runtime/Audio/: Audio.hpp  SunMusicObject.cpp  SunMusicObject.h  SunSoundListener.h  SunSoundObject.cpp  SunSoundObject.h
Engine/Runtime/Core/: SunAction.cpp  SunAction.h  SunBase.cpp  SunBase.h  SunButtonState.h  SunDirectionalLightObject.cpp  SunDirectionalLightObject.h  SunGame.cpp  SunGame.h  SunNode.cpp  SunNode.h  SunObject.cpp  SunObject.h  SunPointLightObject.cpp  SunScene.cpp  (+7 more)
Engine/Scripts/: SunCamera.lua  vec3.lua
Engine/Shaders/: 2DFullscreenQuadFragment.frag  2DQuad.frag  2DQuad.vert  BlinnPhongTextureBoneless.vert  Normals.frag  Normals.geom  Normals.vert  WhiteQuad.frag
Engine/Tests/: CMakeLists.txt  Test.REMOVED.git-id
Sample Projects/Feature/: CMakeCache.txt  CMakeLists.txt  Feature  Feature.REMOVED.git-id  Makefile  cmake_install.cmake
Sample Projects/GUI/: CMakeLists.txt
Sample Projects/Voxel/: CMakeLists.txt
samples/GUI/: CMakeLists.txt
samples/Voxel/: CMakeLists.txt
src/: CMakeLists.txt  Services.hpp
src/Audio/: Audio.hpp  CMakeLists.txt  SunAudioDeviceManager.cpp  SunAudioDeviceManager.h  SunAudioListener.cpp  SunAudioSource.cpp  SunSoundBufferStorage.h  SunSoundListener.h  SunSoundObject.cpp
src/Core/: CMakeLists.txt  SunBase.cpp  SunBase.h  SunComponent.cpp  SunComponent.h  SunGame.cpp  SunObject.cpp  SunObject.h  SunScene.h  SunServiceManager.h
src/Extra/: CMakeLists.txt
src/GUI/: CMakeLists.txt  GUI.hpp  SunGUIItem.cpp  SunGUIItem.h  SunGUILabel.cpp  SunGUILabel.h  SunGUIMenu.cpp  SunGUIMenu.h  SunGUIPath.cpp  SunGUIPath.h  SunGUIRenderer.cpp  SunGUIRendering.cpp  SunGUIRendering.h  SunGUISystem.cpp  SunGUIView.cpp  SunGUIView.h  SunGUIViewController.h  SunGUIWindow.cpp  SunGUIWindow.h  SunTextRenderer.cpp
src/Graphics/: CMakeLists.txt  Graphics.hpp  SunCamera.cpp  SunMesh.cpp  SunRenderNode.cpp  SunRenderer.cpp  SunTexturedQuad.cpp  SunUniformPasser.h
src/Input/: CMakeLists.txt  SunCursorManager.cpp  SunKeyboardManager.cpp  SunMouseButtonManager.cpp
src/Output/: CMakeLists.txt
src/Physics/: CMakeLists.txt  SunPhysicsForce.cpp  SunPhysicsForce.h
src/Scripting/: CMakeLists.txt  SunGlobalScriptingEnvironment.cpp  SunGlobalScriptingEnvironment.h  SunLuaRawCFunction.cpp  SunLuaTypeRegistrar.h  SunLuaValue.cpp  SunScript.cpp
src/sunglasses/: CMakeLists.txt
sunglasses/: CMakeLists.txt
sunglasses/src/: CMakeLists.txt  Sunglasses.hpp  replace_include.sh
tests/: CMakeLists.txt  main.cpp  test_Action.cpp  test_Base.cpp  test_LuaPrimitives.cpp  test_LuaTypeRegistrar.cpp  test_Node.cpp  test_ResourceManager.cpp  test_ResourceService.cpp  test_Script.cpp  test_Script_1.lua  test_SunAction.cpp  test_SunBase.cpp  test_SunLuaPrimitives.cpp  test_SunLuaTypeRegistrar.cpp  test_SunResourceManager.cpp  test_SunResourceService.cpp  test_SunScript.cpp  test_SunScript_0.lua
(+1273 files in other folders)
