cmake_minimum_required(VERSION 3.2)

add_subdirectory(Audio)
add_subdirectory(Core)
add_subdirectory(Extern)
add_subdirectory(Extra)
add_subdirectory(Graphics)
add_subdirectory(GUI)
add_subdirectory(Input)
add_subdirectory(Output)
#add_subdirectory(Physics)
add_subdirectory(Scripting)

add_sources_to_parent()
